// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Container: PreviewJson component should render correct layout 1`] = `
<n
  collapseStringsAfterLength={false}
  collapsed={1}
  defaultValue={null}
  displayArrayKey={true}
  displayDataTypes={false}
  displayObjectSize={false}
  enableClipboard={true}
  groupArraysAfterLength={100}
  iconStyle="triangle"
  indentWidth={1}
  name={false}
  onAdd={false}
  onDelete={false}
  onEdit={false}
  onSelect={false}
  quotesOnKeys={true}
  shouldCollapse={false}
  sortKeys={false}
  src={
    Object {
      "labels": Array [
        Label {
          "confidence": 0.8,
          "content": "MOCK FIELD KEY 1",
          "fieldCode": "MOCK_FIELD_1",
          "h": 0.4,
          "index": 0,
          "meta": Object {},
          "type": "key",
          "typeName": "label",
          "uid": "1",
          "w": 0.3,
          "x": 0.1,
          "y": 0.2,
        },
        Label {
          "confidence": 0.4,
          "content": "MOCK FIELD VALUE 1",
          "fieldCode": "MOCK_FIELD_1",
          "h": 0.8,
          "index": 0,
          "meta": Object {},
          "type": "value",
          "typeName": "label",
          "uid": "2",
          "w": 0.7,
          "x": 0.5,
          "y": 0.6,
        },
        Label {
          "confidence": 0.77,
          "content": "MOCK FIELD KEY 2",
          "fieldCode": "MOCK_FIELD_2",
          "h": 0.12,
          "index": 1,
          "meta": Object {},
          "type": "key",
          "typeName": "label",
          "uid": "3",
          "w": 0.11,
          "x": 0.09,
          "y": 0.1,
        },
        Label {
          "confidence": 0.66,
          "content": "MOCK FIELD VALUE 2",
          "fieldCode": "MOCK_FIELD_2",
          "h": 0.16,
          "index": 1,
          "meta": Object {},
          "type": "value",
          "typeName": "label",
          "uid": "4",
          "w": 0.15,
          "x": 0.13,
          "y": 0.14,
        },
      ],
      "tables": Array [
        Table {
          "fieldCode": "MOCK_FIELD_4",
          "index": undefined,
          "merges": Array [],
          "meta": Object {},
          "typeName": "table",
          "uid": "5",
          "values": Array [
            CellValue {
              "column": 0,
              "confidence": 0.8,
              "row": 0,
              "value": "value",
            },
          ],
          "xGuidelines": Array [
            0.5,
            0.6,
            0.8,
          ],
          "yGuidelines": Array [
            0.303,
            0.32,
            0.336,
          ],
        },
      ],
    }
  }
  style={Object {}}
  theme={
    Object {
      "base00": "#ffffff",
      "base01": "#4BCC7E",
      "base02": "#FFF1F0",
      "base03": "#404040",
      "base04": "#404040",
      "base05": "#FF5645",
      "base06": "#404040",
      "base07": "#FF5645",
      "base08": "#404040",
      "base09": "#4BCC7E",
      "base0A": "#303030",
      "base0B": "#3980E8",
      "base0C": "#657181",
      "base0D": "#657181",
      "base0E": "#404040",
      "base0F": "#B18D40",
    }
  }
  validationMessage="Validation Error"
/>
`;

exports[`Container: PreviewJson mapStateToProps should pass state as props to WrappedComponent 1`] = `
Object {
  "pageMarkup": Object {
    "labels": Array [
      Label {
        "confidence": 0.8,
        "content": "MOCK FIELD KEY 1",
        "fieldCode": "MOCK_FIELD_1",
        "h": 0.4,
        "index": 0,
        "meta": Object {},
        "type": "key",
        "typeName": "label",
        "uid": "1",
        "w": 0.3,
        "x": 0.1,
        "y": 0.2,
      },
      Label {
        "confidence": 0.4,
        "content": "MOCK FIELD VALUE 1",
        "fieldCode": "MOCK_FIELD_1",
        "h": 0.8,
        "index": 0,
        "meta": Object {},
        "type": "value",
        "typeName": "label",
        "uid": "2",
        "w": 0.7,
        "x": 0.5,
        "y": 0.6,
      },
      Label {
        "confidence": 0.77,
        "content": "MOCK FIELD KEY 2",
        "fieldCode": "MOCK_FIELD_2",
        "h": 0.12,
        "index": 1,
        "meta": Object {},
        "type": "key",
        "typeName": "label",
        "uid": "3",
        "w": 0.11,
        "x": 0.09,
        "y": 0.1,
      },
      Label {
        "confidence": 0.66,
        "content": "MOCK FIELD VALUE 2",
        "fieldCode": "MOCK_FIELD_2",
        "h": 0.16,
        "index": 1,
        "meta": Object {},
        "type": "value",
        "typeName": "label",
        "uid": "4",
        "w": 0.15,
        "x": 0.13,
        "y": 0.14,
      },
    ],
    "tables": Array [
      Table {
        "fieldCode": "MOCK_FIELD_4",
        "index": undefined,
        "merges": Array [],
        "meta": Object {},
        "typeName": "table",
        "uid": "5",
        "values": Array [
          CellValue {
            "column": 0,
            "confidence": 0.8,
            "row": 0,
            "value": "value",
          },
        ],
        "xGuidelines": Array [
          0.5,
          0.6,
          0.8,
        ],
        "yGuidelines": Array [
          0.303,
          0.32,
          0.336,
        ],
      },
    ],
  },
}
`;
